add_executable (pumiMBBL1D_Demo pumiMBBL_1D_test.cpp)
add_executable (pumiMBBL2D_Demo pumiMBBL_2D_test.cpp)
add_executable (pumiMBBL1D_Demo_CPU pumiMBBL_1D_CPU_test.cpp)
add_executable (pumiMBBL2D_Demo_CPU pumiMBBL_2D_CPU_test.cpp)
add_executable (pumiMBBL2D_advection pumiMBBL_2D_advection_test.cpp)
add_executable (pumiMBBL2D_gradient pumiMBBL_2D_gradient_test.cpp)
add_executable (pumiMBBL2D_advection_nonconvex pumiMBBL_2D_advection_non_convex.cpp)
add_executable (pumiMBBL2D_fish pumiMBBL_2D_fish.cpp)
add_executable (pumiMBBL2D_rect pumiMBBL_2D_rect.cpp)

target_link_libraries (pumiMBBL2D_Demo pumiMBBL m)
target_link_libraries (pumiMBBL1D_Demo pumiMBBL m)
target_link_libraries (pumiMBBL2D_Demo_CPU pumiMBBL m)
target_link_libraries (pumiMBBL1D_Demo_CPU pumiMBBL m)
target_link_libraries (pumiMBBL2D_advection pumiMBBL m)
target_link_libraries (pumiMBBL2D_gradient pumiMBBL m)
target_link_libraries (pumiMBBL2D_advection_nonconvex pumiMBBL m)
target_link_libraries (pumiMBBL2D_fish pumiMBBL m)
target_link_libraries (pumiMBBL2D_rect pumiMBBL m)

install(TARGETS pumiMBBL2D_Demo DESTINATION bin)
install(TARGETS pumiMBBL1D_Demo DESTINATION bin)
install(TARGETS pumiMBBL2D_Demo_CPU DESTINATION bin)
install(TARGETS pumiMBBL1D_Demo_CPU DESTINATION bin)
install(TARGETS pumiMBBL2D_advection DESTINATION bin)
install(TARGETS pumiMBBL2D_gradient DESTINATION bin)
install(TARGETS pumiMBBL2D_advection_nonconvex DESTINATION bin)
install(TARGETS pumiMBBL2D_fish DESTINATION bin)
install(TARGETS pumiMBBL2D_rect DESTINATION bin)
